# PROI_23

./: CMakeLists.txt  Documentation.txt  Dokumentation.txt  bagpackUnit.cpp  binaryPhenotype.cpp  binaryPhenotype.h  main.cpp  menu.cpp  menu.h  numericPhenotype.cpp  phenotype.h  random.cpp  random.h  unit.h
FILE/: file.cpp  file.h
FLYWEIGHT/: flyweightBagpackUnit.cpp  flyweightBagpackUnit.h  flyweightSudokuUnit.cpp  flyweightSudokuUnit.h  flyweightUnit.cpp  flyweightUnit.h
MENU/: menu.cpp  menu.h
PHENOTYPE/: binaryPhenotype.cpp  binaryPhenotype.h  file.cpp  file.h  numericPhenotype.cpp  numericPhenotype.h  phenotype.cpp  phenotype.h  random.h
POPULATION/: containerOfPopulations.cpp  containerOfPopulations.h  population.h
UNIT/: bagpackUnit.cpp  bagpackUnit.h  flyweightBagpackUnit.cpp  flyweightBagpackUnit.h  sudokuUnit.cpp  sudokuUnit.h  unit.cpp  unit.h
